versions/v1.3/modules/en/pages/installation-setup/config/update-configuration.adoc
= Update the Configuration After Installation
:revdate: 2024-11-22
:page-revdate: {revdate}

The {harvester-product-name} operating system has an immutable design, which means most files in the  OS revert to their pre-configured state after a reboot. The operating system loads the pre-configured values of system components from configuration files during the boot time.

This page describes how to edit some of the most-requested configurations. To update a configuration, you must first update the runtime value in the system and then update configuration files to make the changes persistent between reboots.

[NOTE]
====
If you upgrade from a version before `v1.1.2`, the `cloud-init` file in examples will be `/oem/99_custom.yaml`. Please substitute the value if needed.
====

== DNS servers

=== Runtime change

. Log in to a node and become root. See xref:../../troubleshooting/operating-system.adoc#_how_to_log_in_to_a_harvester_node[how to log into a node] for more details.
. Edit `/etc/sysconfig/network/config` and update the following line. Use a space to separate DNS server addresses if there are multiple servers.
+
[,yaml]
----
 NETCONFIG_DNS_STATIC_SERVERS="8.8.8.8 1.1.1.1"
----

. Update and reload the configuration with the following command:
+
[,sh]
----
 netconfig update
----

. Confirm the file `/etc/resolv.conf` contains the correct DNS servers with the `cat` command:
+
[,sh]
----
 cat /etc/resolv.conf
----

=== Configuration persistence

The persistent name of the cloud-init file is `/oem/90_custom.yaml`. {harvester-product-name} now uses a newer version of Elemental, which creates the file during installation.

When upgrading from an earlier version, {harvester-product-name} retains the old file name (`/oem/99_custom.yaml`) to avoid confusion. You can manually rename the file to `/oem/90_custom.yaml` if necessary.

. Backup the elemental `cloud-init` file `/oem/90_custom.yaml` as follows:
+
[,sh]
----
 cp /oem/90_custom.yaml /oem/install/90_custom.yaml.$(date --iso-8601=minutes)
----

. Edit `/oem/90_custom.yaml` and update the value under the yaml path `stages.initramfs[0].commands`. The `commands` array must contain a line to manipulate the `NETCONFIG_DNS_STATIC_SERVERS` config. Add the line if the line doesn't exist.
+
The following example adds a line to change the `NETCONFIG_DNS_STATIC_SERVERS` config:
+
[,yaml]
----
 stages:
   initramfs:
     - commands:
         - sed -i 's/^NETCONFIG_DNS_STATIC_SERVERS.*/NETCONFIG_DNS_STATIC_SERVERS="8.8.8.8 1.1.1.1"/' /etc/sysconfig/network/config
----
+
Replace the DNS server addresses and save the file. {harvester-product-name} sets up new servers after rebooting.

== NTP servers

For more information about NTP settings, see the xref:../../hosts/hosts.adoc#_ntp_configuration[NTP servers].

== Password of user `rancher`

=== Runtime change

. Log in to a node as user `rancher`. See xref:../../troubleshooting/operating-system.adoc#_how_to_log_in_to_a_harvester_node[how to log into a node] for more details.
. To reset the password for the user `rancher`, run the command `passwd`.

=== Configuration persistence

. Backup the elemental `cloud-init` file `/oem/90_custom.yaml` as follows:
+
[,sh]
----
 cp /oem/90_custom.yaml /oem/install/90_custom.yaml.$(date --iso-8601=minutes)
----

. Edit `/oem/90_custom.yaml` and update the yaml path `stages.initramfs[0].users.rancher.passwd`. Refer to the configuration xref:./configuration-file.adoc#_os_password[`os.password`] for details on how to specify the password in an encrypted form.

== Bonding slaves

You can update the slave interfaces of the management bonding interface `mgmt-bo`.

=== Runtime change

. Log in to a node and become root. See xref:../../troubleshooting/operating-system.adoc#_how_to_log_in_to_a_harvester_node[how to log into a node] for more details.
. Identify the interface names with the following command:
+
[,sh]
----
 ip a
----

. Edit `/etc/sysconfig/network/ifcfg-mgmt-bo` and update the lines associated with bonding slaves and bonding mode:
+
----
 BONDING_SLAVE_0='ens5'
 BONDING_SLAVE_1='ens6'
 BONDING_MODULE_OPTS='miimon=100 mode=balance-tlb '
----

. Restart the network with the `wicked ifreload` command:
+
[,sh]
----
 wicked ifreload mgmt-bo
----
+

[CAUTION]
====
A mistake in the configuration may disrupt the SSH session.
====

=== Configuration persistence

. Backup the elemental cloud-init file `/oem/90_custom.yaml` as follows:
+
[,sh]
----
 cp /oem/90_custom.yaml /oem/install/90_custom.yaml.$(date --iso-8601=minutes)
----

. Edit `/oem/90_custom.yaml` and update the yaml path `stages.initramfs[0].files`. More specifically, update the content of the `/etc/sysconfig/network/ifcfg-mgmt-bo` file and edit the `BONDING_SLAVE_X` and `BONDING_MODULE_OPTS` entries accordingly:
+
[,yaml]
----
 stages:
   initramfs:
   - ...
     files:
     - path: /etc/sysconfig/network/ifcfg-mgmt-bo
       permissions: 384
       owner: 0
       group: 0
       content: |+
           STARTMODE='onboot'
           BONDING_MASTER='yes'
           BOOTPROTO='none'
           POST_UP_SCRIPT="wicked:setup_bond.sh"


           BONDING_SLAVE_0='ens5'
           BONDING_SLAVE_1='ens6'

           BONDING_MODULE_OPTS='miimon=100 mode=balance-tlb '

           DHCLIENT_SET_DEFAULT_ROUTE='no'

       encoding: ""
       ownerstring: ""
     - path: /etc/sysconfig/network/ifcfg-ens6
       permissions: 384
       owner: 0
       group: 0
       content: |
         STARTMODE='hotplug'
         BOOTPROTO='none'
       encoding: ""
       ownerstring: ""
----
+

[NOTE]
====
If you didn't select an interface during installation, you must add an entry to initialize the interface. Please check the `/etc/sysconfig/network/ifcfg-ens6` file creation in the above example. The file name should be `/etc/sysconfig/network/ifcfg-<interface-name>`.
====

